# agentfabric

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  launcher.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/tutorials/: 01_first_agent.md  02_enhance_existing.md  03_multi_agent_team.md  04_pipeline_scheduler.md  05_create_plugin.md  06_connect_mcp.md  07_use_langgraph.md
examples/: 01_hello_agent.py  02_byoa_wrapper.py  03_multi_agent_team.py  04_dag_pipeline.py  05_cron_scheduler.py  06_custom_plugin.py  07_mcp_bridge.py  08_langgraph_adapter.py
src/agent_fabric/: __init__.py
src/agent_fabric/cli/: __init__.py  main.py  tui.py
src/agent_fabric/core/: __init__.py  config.py  events.py  models.py  permissions.py  protocols.py  workspace.py
src/agent_fabric/memory/: __init__.py  consolidation.py  engine.py  forgetting.py  fts_search.py  knowledge_graph.py  shared.py  sqlite_store.py  vector_store.py
src/agent_fabric/observability/: __init__.py  event_store.py  logger.py
src/agent_fabric/plugins/official/: __init__.py  calendar.py  github_enhanced.py  gmail.py  notion.py  slack.py
src/agent_fabric/providers/: __init__.py  anthropic.py  google.py  groq_provider.py  lmstudio.py  ollama.py  openai.py  openrouter.py
src/agent_fabric/registry/: __init__.py  catalog.py  installer.py  scaffold.py
src/agent_fabric/runtime/: __init__.py  agent.py  enhance.py  executor.py  mailbox.py  runtime.py  team.py
src/agent_fabric/scheduler/: __init__.py  history.py  scheduler.py  triggers.py
src/agent_fabric/server/: __init__.py  app.py
src/agent_fabric/tools/: __init__.py  decorator.py  registry.py  runtime.py  schema.py
src/agent_fabric/tools/builtin/: __init__.py  file_ops.py  file_write.py  http_request.py  shell_execute.py  url_reader.py  web_search.py
studio/src/: app.css  app.html
studio/src-tauri/: tauri.conf.json
studio/src-tauri/src/: lib.rs
studio/src/routes/: +layout.svelte  +page.svelte
tests/: test_core.py  test_e2e_integration.py  test_memory_and_tools.py  test_phase2e_providers_and_tools.py  test_phase3a_registry.py  test_phase3b_community_plugins.py  test_phase3d_advanced_memory.py  test_phase_b_sdk.py  test_phase_c_api.py  test_runtime_and_providers.py  test_scheduler.py  test_server_and_cli.py  test_teams.py
