[project]
name = "agentfabric-sdk"
version = "0.1.0b1"
description = "The runtime for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AgentFabric Contributors" }
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = { Homepage = "https://github.com/Ishaan-Sharma-tech/agentfabric", Repository = "https://github.com/Ishaan-Sharma-tech/agentfabric.git" }
dependencies = [
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
agentfabric = "agent_fabric.cli.main:app"

[project.optional-dependencies]
vectors = [
    "qdrant-client>=1.7.0",
]
openai = [
    "openai>=1.10.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
google = [
    "google-generativeai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_fabric"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.24.0",
]
